# mask

./: .git-blame-ignore-revs  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package.json  proj_main.yml  pyproject.toml  pytest.ini  render.yaml  webpack-stats.json
backend/: .env  .env.example  Dockerfile  manage.py  my_project.dot  output.json  pyproject.toml  pytest.ini
backend/backend/: docker_helper.py  settings.py  terminal_helper.py  urls.py
backend/mask/: .loc_ociw214.pem  celery.py  main.py  mask001.SMF  mask001.obw  urls.py  wsgi.py
backend/mask/mask/: docker_helper.py  obj_from_file.py  obj_to_json.py  urls.py
backend/mask/maskgen_api/: models.py  obs_file_formatting.py  (+2 more)
backend/maskgen_api/: mask001.obw  models.py  obs_file_formatting.py  serializers.py  urls.py  validator.py  views.py
backend/template/: README  models.py  urls.py  validator.py  views.py
backend/tests/: test_instrument_view.py  test_maskgen.py  test_obj_views.py
backend/users/: tasks.py
frontend/: .env  package-lock.json  package.json  tsconfig.json
frontend/public/: astroemw.js  index.html
frontend/src/: AladinSlits.tsx  AladinTest.tsx  App.tsx  Button.tsx  EssentialControlButtons.tsx  JS9ControlButton.tsx  JS9Viewer.tsx  MainScreen.tsx  PreviewControlButton.tsx  StartButton.tsx  StartScreen.tsx  Technician.tsx  index.css  index.tsx  react-icons.d.ts  supabase.ts  theme.ts
mask/: db.sqlite3  pyproject.toml
mask/mask/: docker_helper.py  settings.py  urls.py
mask/maskgen_api/: apps.py  models.py  obs_file_formatting.py  serializers.py  urls.py  views.py
(+31 files in other folders)
