[project]
name = "mask"
version = "0.1.0"
description = "Mask cutting software for multi-object spectrographs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.0",
    "django>=5.2.3",
    "django-extensions>=4.1",
    "djangorestframework>=0.1.0",
    "pandas>=2.3.0",
    "pillow>=11.3.0",
    "pre-commit>=4.2.0",
    "pydotplus>=2.0.2",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
]

[dependency-groups]
lint = [
    "ruff>=0.12.1",
]
